fdo#70198: sw: don't truncate Time values on 32bit platforms

SwDoc::SetFixFields() uses sal_uLong to store Time.GetTime() which needs
64 bits.

Also fix same problem on Time fields in HTML import.

(regression from 9830fd36dbdb72c79703b0c61efc027fba793c5a)

Change-Id: I5d0388cbc364e1f9dfb60ff9e83c7d2f101c69d8